limit from model added to bar chart

--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -105,8 +105,8 @@
                         <mat-slider #PosOFF
                         class="example-margin"
                         [disabled]="disabled"
-                        [max]="limit.ulim"
-                        [min]="limit.llim"
+                        [max]="limit.poslim.ulim"
+                        [min]="limit.poslim.llim"
                         [step]="0.1"
                         [thumbLabel]="false"
                         [tickInterval]="tickInterval"
@@ -119,8 +119,8 @@
                         <mat-slider #VelOFF
                         class="example-margin"
                         [disabled]="disabled"
-                        [max]="limit.vellim"
-                        [min]="-limit.vellim"
+                        [max]="limit.vellim.ulim"
+                        [min]="limit.vellim.llim"
                         [step]="step"
                         [thumbLabel]="false"
                         [tickInterval]="tickInterval"
@@ -133,8 +133,8 @@
                         <mat-slider #TorqueOFF
                         class="example-margin"
                         [disabled]="disabled"
-                        [max]="limit.efflim"
-                        [min]="-limit.efflim"
+                        [max]="limit.efflim.ulim"
+                        [min]="limit.efflim.llim"
                         [step]="step"
                         [thumbLabel]="false"
                         [tickInterval]="tickInterval"
@@ -179,8 +179,8 @@
                         <mat-slider #Pos
                         class="example-margin"
                         [disabled]="disabled"
-                        [max]="limit.ulim"
-                        [min]="limit.llim"
+                        [max]="limit.poslim.ulim"
+                        [min]="limit.poslim.llim"
                         [step]="0.1"
                         [thumbLabel]="false"
                         [tickInterval]="tickInterval"
@@ -195,8 +195,8 @@
                         <mat-slider #Vel
                         class="example-margin"
                         [disabled]="disabled"
-                        [max]="limit.vellim"
-                        [min]="-limit.vellim"
+                        [max]="limit.vellim.ulim"
+                        [min]="limit.vellim.llim"
                         [step]="0.1"
                         [thumbLabel]="false"
                         [tickInterval]="tickInterval"
@@ -209,8 +209,8 @@
                         <mat-slider #Torque
                         class="example-margin"
                         [disabled]="disabled"
-                        [max]="limit.efflim"
-                        [min]="-limit.efflim"
+                        [max]="limit.efflim.ulim"
+                        [min]="limit.efflim.llim"
                         [step]="0.1"
                         [thumbLabel]="false"
                         [tickInterval]="tickInterval"
